--- a/_posts/2025-11-03-first-job.md
+++ b/_posts/2025-11-03-first-job.md
@@ -1,5 +1,5 @@
 ---
-title: 첫 직장
+title: 1st project
 date: 2025-11-03 00:00:00 +0900
 ---
 
@@ -25,6 +25,10 @@ date: 2025-11-03 00:00:00 +0900
 ## 아키텍쳐
 
 (준비중)
+
+## 어려웠던 점
+
+- 
 
 ## 회고
 
