--- a/_posts/2025-11-12-third-job.md
+++ b/_posts/2025-11-12-third-job.md
@@ -18,13 +18,25 @@ date: 2025-11-11 00:00:00 +0900
 - a360 라이선스 관리
   - 라이선스 만료 후 자동 재발급 등
 - a360 자격증명 생성 및 관리
-- 
+- 데이터 이관 쿼리, 프로시져
+- 전용봇 A360-포털 연계, 배치 작업, 수동 동기화
+- 교육용 A360-포털 연계 데이터 생성, 배치 작업, 수동 동기화
+- 패킷 변조 막기 위한 데이터 암복호화
 
 ## 아키텍쳐
 
 ![RPA.png](assets/img/RPA.png)
 
 ## 어려웠던 점
+
+![sample001.png](assets/img/sample001.png)
+
+포털을 통해 A360 와 통신하는 데이터 양이 방대했기 때문에, 백엔드 로직은 이벤트 기반으로 구현되어야 했다.
+생전 처음 보는 Reactor 라이브러리를 익히는 것, 다른 개발자가 사용하기 편하게 공통 모듈을 만드는 것 등이 낯설고 어려웠다.
+- 명확한 API 명세서의 부재
+- 대량의 기존 운영 데이터를 제한 된 시간내에 마이그레이션 할 때 backpressure 고려하지 않아 발생한 버그
+- 기존 운영 데이터 LLM 분석 후 업로드하는 과정 중 A서버, B서버를 번갈아가면서 중간에 에러가 발생했을 때, 롤백이 불가능한 경우에 대한 대비
+- automation anywhere 의 응답이 너무 늦어지는 경우, 포털의 DB connection timeout 문제
 
 
 
