--- a/_posts/2025-11-03-first-job.md
+++ b/_posts/2025-11-03-first-job.md
@@ -28,7 +28,8 @@ date: 2025-11-03 00:00:00 +0900
 
 ## 어려웠던 점
 
-- 
+- 실업급여에 대한 법, 편람, 기존 상담 사례, 예외 등을 지식을 체계적으로 정리한 뒤, 프로젝트에 녹여내는 작업
+- 머신러닝에 필요한 엔티티 추출, 발화문 정리
 
 ## 회고
 
