--- a/_posts/2025-11-12-third-job.md
+++ b/_posts/2025-11-12-third-job.md
@@ -31,15 +31,22 @@ date: 2025-11-11 00:00:00 +0900
 
 ![sample001.png](assets/img/sample001.png)
 
-포털을 통해 A360 와 통신하는 데이터 양이 방대했기 때문에, 백엔드 로직은 이벤트 기반으로 구현되어야 했다.
-생전 처음 보는 Reactor 라이브러리를 익히는 것, 다른 개발자가 사용하기 편하게 공통 모듈을 만드는 것 등이 낯설고 어려웠다.
-- 명확한 API 명세서의 부재
-- 대량의 기존 운영 데이터를 제한 된 시간내에 마이그레이션 할 때 backpressure 고려하지 않아 발생한 버그
-- 기존 운영 데이터 LLM 분석 후 업로드하는 과정 중 A서버, B서버를 번갈아가면서 중간에 에러가 발생했을 때, 롤백이 불가능한 경우에 대한 대비
-- automation anywhere 의 응답이 너무 늦어지는 경우, 포털의 DB connection timeout 문제
+포털을 통해 A360 와 통신하는 데이터 양이 많았기 때문에, 백엔드 로직은 Event driven 으로 구현되었다. 짧게는 5분, 길게는 10분이 걸리는 경우도 있었다. 
+자동화 프로세스 실행에 엮인 API 가 많아서 오래걸려서 실패하게 되면, 포털에서는 롤백이 되지만 A360 서버에 모든 항목을 롤백 시키기는 어려웠다.
+따라서, 현업의 요구에 따라서 오래 걸려도 반드시 프로세스 요청이 종료될 때 까지 기다렸다가 처리해야 했다.
 
+생전 처음 보는 Reactor 라이브러리와 그 생태계를 익히는 것, 다른 개발자가 사용하기 편하게 공통 모듈을 만드는 것 등이 낯설고 어려웠다.
+- a360 서버 최신 API 명세서의 부재
+- 대량의 기존 운영 데이터를 제한 된 시간내에 마이그레이션 할 때 backpressure 고려하지 않아 발생한 버그
+- 기존 운영 데이터 LLM 분석 후 업로드하는 과정 중 A서버, B서버를 번갈아가면서 중간에 에러가 발생했을 때, 롤백이 불가능한 경우
+- automation anywhere 의 응답이 너무 늦어지는 경우, 포털의 DB connection timeout 문제
+- 비동기에서 발생하는 race condition -> 비관적 Lock
 
 
 ## 회고
+
+reactive vs event driven 
+
+pessimistic lock vs optimistic lock
 
 
