--- a/_posts/2025-11-12-third-job.md
+++ b/_posts/2025-11-12-third-job.md
@@ -31,22 +31,23 @@ date: 2025-11-11 00:00:00 +0900
 
 ![sample001.png](assets/img/sample001.png)
 
-포털을 통해 A360 와 통신하는 데이터 양이 많았기 때문에, 백엔드 로직은 Event driven 으로 구현되었다. 짧게는 5분, 길게는 10분이 걸리는 경우도 있었다. 
+포털을 통해 A360 와 통신하는 데이터 양이 많았기 때문에, 백엔드 로직은 request-callback 패턴으로 구현되었다. 짧게는 5분, 길게는 10분이 걸리는 경우도 있었다. 
 자동화 프로세스 실행에 엮인 API 가 많아서 오래걸려서 실패하게 되면, 포털에서는 롤백이 되지만 A360 서버에 모든 항목을 롤백 시키기는 어려웠다.
 따라서, 현업의 요구에 따라서 오래 걸려도 반드시 프로세스 요청이 종료될 때 까지 기다렸다가 처리해야 했다.
 
 생전 처음 보는 Reactor 라이브러리와 그 생태계를 익히는 것, 다른 개발자가 사용하기 편하게 공통 모듈을 만드는 것 등이 낯설고 어려웠다.
 - a360 서버 최신 API 명세서의 부재
-- 대량의 기존 운영 데이터를 제한 된 시간내에 마이그레이션 할 때 backpressure 고려하지 않아 발생한 버그
-- 기존 운영 데이터 LLM 분석 후 업로드하는 과정 중 A서버, B서버를 번갈아가면서 중간에 에러가 발생했을 때, 롤백이 불가능한 경우
+- 기존 운영 데이터 LLM 분석 후 업로드하는 과정 중 A서버, B서버를 번갈아가며 통신하는 도중 boundElastic 에러
+  - backpressure 두어 해결 
 - automation anywhere 의 응답이 너무 늦어지는 경우, 포털의 DB connection timeout 문제
-- 비동기에서 발생하는 race condition -> 비관적 Lock
-
+- 포털은 비관적 Lock (정합성이 중요), A360 는 낙관적 Lock (version 관리) 에 대한 이해를 바탕으로 트랜잭션 격리, 전파, 롤백 내부 정책 대응
 
 ## 회고
 
-reactive vs event driven 
+1. reactive / event driven / request-callback
+2. pessimistic lock / optimistic lock
 
-pessimistic lock vs optimistic lock
+해당 프로젝트는 노후화 된 RPA 포털을 새롭게 구축하는 사업이다. 비싼 솔루션인 automation anywhere 을 권한을 두어 제한하고, 스케쥴링, 모니터링, 운영으로 가기 전 테스트, 결재 및 상신, 라이선스 관리,
+동기화, 배치 등의 작업을 구현하는 것이 목표였다. 
 
-
+CRUD, web socket 만 알고있던 나에겐 큰 도전이자 배움의 기회였다. 메세지 큐(Rabbit MQ) 를 이용한 서버 간 비동기 통신으로 서버가 다운되더라도 작업이 초기화되지 않는 시스템을 만들려고 했다.
