--- a/_posts/2025-12-01-fifth-job.md
+++ b/_posts/2025-12-01-fifth-job.md
@@ -17,18 +17,33 @@ date: 2025-12-01 00:00:00 +0900
 
 ## 역할
 
-- 각종 기능 개발
-  - 
-- tanstack 쿼리 적용
-- caffeine cache 적용
-- 
+- 역할 및 권한 적용
+- 다국어 적용
+- 공통 코드
+- 감사 로그
 
 ## 아키텍쳐 정리
 
-https://multi-tenant-presentation.vercel.app
+[구조를 정리한 링크](https://multi-tenant-presentation.vercel.app)
 
-## 어려웠던 점
+## 상세 역할
 
+### 변수 태그
 
+note: `{{` 동작 원리, context 적용한 방식
 
+### 역할 및 권한 적용
 
+note: 캐시 적용, aop 어노테이션 동작
+
+### 다국어 적용
+
+note: 캐시 적용, i18n 을 직접 구현한 내용
+
+### 공통 코드
+
+note: 캐시 적용, 
+
+### 감사 로그
+
+note: AOP 적용 방식, capture 동작 원리, coroutines 와의 thread 충돌 문제
