--- a/_posts/2025-12-01-fifth-job.md
+++ b/_posts/2025-12-01-fifth-job.md
@@ -30,7 +30,7 @@ date: 2025-12-01 00:00:00 +0900
 
 ### 변수 태그
 
-note: `{{` 동작 원리, context 적용한 방식
+note: 변수 참조 동작 구조, context 적용한 방식
 
 ![Image](https://github.com/user-attachments/assets/21cbf464-3dbd-46ae-9084-5403416f6c08)
 
