--- a/_posts/2025-12-01-fifth-job.md
+++ b/_posts/2025-12-01-fifth-job.md
@@ -34,29 +34,29 @@ note: 변수 참조 동작 구조, context 적용한 방식
 
 ![Image](https://github.com/user-attachments/assets/21cbf464-3dbd-46ae-9084-5403416f6c08)
 
-<img width="8191" height="5421" alt="Image" src="https://github.com/user-attachments/assets/ce7cbfeb-b203-4a82-9e5d-700995a84350" />
+<img alt="Image" src="https://github.com/user-attachments/assets/ce7cbfeb-b203-4a82-9e5d-700995a84350" />
 
 ### 역할 및 권한 적용
 
 note: 캐시 적용, aop 어노테이션 동작
 
-<img width="8192" height="4916" alt="Image" src="https://github.com/user-attachments/assets/8b58119a-7823-4a1f-ae16-d9454c3e9587" />
+<img alt="Image" src="https://github.com/user-attachments/assets/8b58119a-7823-4a1f-ae16-d9454c3e9587" />
 
-<img width="8192" height="4305" alt="Image" src="https://github.com/user-attachments/assets/aef7866c-f4e8-4760-9eec-2d559585ea40" />
+<img alt="Image" src="https://github.com/user-attachments/assets/aef7866c-f4e8-4760-9eec-2d559585ea40" />
 
-<img width="7007" height="4162" alt="Image" src="https://github.com/user-attachments/assets/d229e88a-0801-4d6d-a658-2977e4407553" />
+<img alt="Image" src="https://github.com/user-attachments/assets/d229e88a-0801-4d6d-a658-2977e4407553" />
 
-<img width="3174" height="8097" alt="Image" src="https://github.com/user-attachments/assets/1417e367-6600-4b7e-8cd4-1c904f1516ac" />
+<img alt="Image" src="https://github.com/user-attachments/assets/1417e367-6600-4b7e-8cd4-1c904f1516ac" />
 
-<img width="4619" height="6996" alt="Image" src="https://github.com/user-attachments/assets/45b4b5d8-6427-45aa-b8af-1bf933be7635" />
+<img alt="Image" src="https://github.com/user-attachments/assets/45b4b5d8-6427-45aa-b8af-1bf933be7635" />
 
-<img width="7203" height="5117" alt="Image" src="https://github.com/user-attachments/assets/0261beaa-1d57-4ad2-908a-8a48ae005050" />
+<img alt="Image" src="https://github.com/user-attachments/assets/0261beaa-1d57-4ad2-908a-8a48ae005050" />
 
-<img width="8192" height="8012" alt="Image" src="https://github.com/user-attachments/assets/8114fe9a-8392-4fb5-adbb-4557c4d0cfee" />
+<img alt="Image" src="https://github.com/user-attachments/assets/8114fe9a-8392-4fb5-adbb-4557c4d0cfee" />
 
-<img width="8192" height="5694" alt="Image" src="https://github.com/user-attachments/assets/17010501-bba1-4328-8d88-cc20ad0c15ab" />
+<img alt="Image" src="https://github.com/user-attachments/assets/17010501-bba1-4328-8d88-cc20ad0c15ab" />
 
-<img width="7495" height="6498" alt="Image" src="https://github.com/user-attachments/assets/80756b83-d54a-4d1e-84f0-01d5fa1c9e52" />
+<img alt="Image" src="https://github.com/user-attachments/assets/80756b83-d54a-4d1e-84f0-01d5fa1c9e52" />
 
 
 ### 다국어 적용
