--- a/_posts/2025-12-01-fifth-job.md
+++ b/_posts/2025-12-01-fifth-job.md
@@ -5,7 +5,7 @@ date: 2025-12-01 00:00:00 +0900
 
 .
 
-# H사 자동화 프로젝트 
+# H사 자동화 프로젝트
 
 ## 프로젝트 개요
 
@@ -32,23 +32,37 @@ date: 2025-12-01 00:00:00 +0900
 
 note: 변수 참조 동작 구조, context 적용한 방식
 
-![Image](https://github.com/user-attachments/assets/357b2c1d-e04f-4d63-a666-6fd394048c18)
+![1](../assets/img/포폴_녹화_변수2.gif)
 
 ### 역할 및 권한 적용
 
 note: 캐시 적용, aop 어노테이션 동작
 
-<img alt="1. Permission Check Flow with Cache (Main Data Flow)" src="https://github.com/user-attachments/assets/8c7be703-8846-45cc-a89c-542bed849d96" />
+![1](../assets/img/1.%20Permission%20Check%20Flow%20with%20Cache%20(Main%20Data%20Flow).png)
+
+![2](../assets/img/2.%20Cache%20Invalidation%20Event%20Flow%20(Reactive%20System).png)
+
+![3](../assets/img/3.%20Entity%20Relationship%20Diagram%20(Database%20Structure).png)
+
+![4](../assets/img/4.%20Permission%20Resolution%20Priority%20(RBAC%20+%20ABAC%20Hybrid).png)
+
+![5](../assets/img/5.%20Caffeine%20Cache%20Architecture.png)
+
+![6](../assets/img/6.%20Event-Driven%20Cache%20Invalidation%20Triggers.png)
+
+![7](../assets/img/7.%20AOP%20Aspect%20Execution%20Order.png)
+
+![8](../assets/img/8.%20User%20Permission%20Loading%20(Detailed%20DB%20Queries).png)
+
+![9](../assets/img/9.%20Complete%20System%20Component%20Diagram.png)
 
 ### 다국어 적용
-
-
 
 note: 캐시 적용, i18n 을 직접 구현한 내용
 
 ### 공통 코드
 
-note: 캐시 적용, 
+note: 캐시 적용,
 
 ### 감사 로그
 
