--- a/_posts/2025-12-01-fifth-job.md
+++ b/_posts/2025-12-01-fifth-job.md
@@ -60,6 +60,10 @@ note: 캐시 적용, aop 어노테이션 동작
 
 note: 캐시 적용, i18n 을 직접 구현한 내용
 
+![1](../assets/img/i18n/1.%20Complete%20System%20Data%20Flow%20(Frontend%20to%20Backend).svg)
+
+![2](../assets/img/i18n/2.%20Translation%20Function%20%60t()%60%20Resolution%20Flow.svg)
+
 ### 공통 코드
 
 note: 캐시 적용,
