--- a/_posts/2025-12-01-fifth-job.md
+++ b/_posts/2025-12-01-fifth-job.md
@@ -58,15 +58,65 @@ note: 캐시 적용, aop 어노테이션 동작
 
 ### 다국어 적용
 
-note: 캐시 적용, i18n 을 직접 구현한 내용
+note: 캐시 적용, i18n 을 라이브러리 사용하지 않고 직접 구현한 내용
+
+![1](../assets/img/i18n/1.%20Complete%20System%20Data%20Flow%20(Frontend%20to%20Backend).png)
+
+![2](../assets/img/i18n/2.%20Translation%20Function%20%60t()%60%20Resolution%20Flow.png)
+
+![3](../assets/img/i18n/3.%20Locale%20Change%20Flow%20(Reactive%20System).png)
+
+![4](../assets/img/i18n/4.%20TanStack%20Query%20Cache%20Strategy.png)
+
+![5](../assets/img/i18n/5.%20Edit-in-Place%20Complete%20Flow.png)
+
+![6](../assets/img/i18n/6.%20Excel%20Import_Export%20Data%20Flow.png)
+
+![7](../assets/img/i18n/7.%20Comparison%20View%20Architecture.png)
+
+![8](../assets/img/i18n/8.%20Database%20Schema%20and%20Relationships.png)
+
+![9](../assets/img/i18n/9.%20Frontend%20Cache%20Structure%20(Detailed).png)
+
+![10](../assets/img/i18n/10.%20API%20Error%20Handling%20with%20i18n.png)
+
+![12](../assets/img/i18n/12.%20Complete%20File%20Structure.png)
 
 ### 공통 코드
 
 note: 캐시 적용
 
+![1](../assets/img/codes/1.%20Common%20Code%20System%20-%20Overall%20Architecture.png)
+
+![2](../assets/img/codes/2.%20Database%20ER%20Diagram.png)
+
+![3](../assets/img/codes/3.%20Code%20Hierarchy%20Structure.png)
+
+![4](../assets/img/codes/4.%20Backend%20Cache%20Strategy%20(Caffeine).png)
+
+![5](../assets/img/codes/5.%20Cache%20Invalidation%20Strategy.png)
+
+![6](../assets/img/codes/6.%20Frontend%20Data%20Flow%20(Svelte%205%20+%20TanStack%20Query).png)
+
+![7](../assets/img/codes/7.%20REST%20API%20Endpoints.png)
+
+![8](../assets/img/codes/8.%20Frontend%20Mutation%20Flow.png)
+
+![9](../assets/img/codes/9.%20Frontend%20Composables%20Architecture.png)
+
+![10](../assets/img/codes/10.%20Performance%20Optimization%20Strategy.png)
+
+![11](../assets/img/codes/11.%20Multi-layer%20Caching%20Architecture.png)
+
+
 ### 감사 로그
 
 note: AOP 적용 방식, capture 동작 원리, coroutines 와의 thread 충돌 문제
 
+- 공통 모듈만을 포함한 프로젝트 생성 후 배포
+- 
+
 ### GitHub Action 통한 배포 
+
+
 
